fixed top portion of about page. spacing on bottom

--- a/css/index.css
+++ b/css/index.css
@@ -117,6 +117,11 @@ nav a:hover{
     padding-bottom: 20px;
 }
 
+.top-content .about-text-container{
+  padding: 0 1%;
+  padding-bottom: 20px;
+}
+
 .middle-content {
     margin-bottom: 20px;
     border-bottom: 1px dashed black;
